--- a/src/pack/LoginFrame.form
+++ b/src/pack/LoginFrame.form
@@ -52,7 +52,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Padr&#xe3;o"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
 
@@ -77,7 +77,7 @@
                           <EmptySpace min="-2" pref="164" max="-2" attributes="0"/>
                           <Component id="button_entrar" min="-2" pref="246" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="button_entrar1" min="-2" pref="246" max="-2" attributes="0"/>
+                          <Component id="button_sair" min="-2" pref="246" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="138" max="32767" attributes="0"/>
@@ -100,7 +100,7 @@
                   <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="button_entrar" alignment="3" max="-2" attributes="0"/>
-                      <Component id="button_entrar1" alignment="3" max="-2" attributes="0"/>
+                      <Component id="button_sair" alignment="3" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="113" max="32767" attributes="0"/>
               </Group>
@@ -133,12 +133,12 @@
         </Component>
         <Component class="javax.swing.JPasswordField" name="txt_senha">
         </Component>
-        <Component class="javax.swing.JButton" name="button_entrar1">
+        <Component class="javax.swing.JButton" name="button_sair">
           <Properties>
             <Property name="text" type="java.lang.String" value="Sair"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_entrar1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_sairActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
